# edit-text

./: #.html  .autoenv.zsh  .dockerignore  .env  .gitignore  .travis.yml  CNAME  Cargo.toml  Configure.toml  Dockerfile  Makefile  README.md  Vagrantfile  appendix.html  appveyor.yml  book.toml  bors.toml  cmds.txt  delall.rs  deploying.html  development.html  diary-carets.html  diary-delall.html  dokku.html  edit-server-binary.html  editor-basics.html  editor-component.html  ferda.py  fix.rs  frequency  frontend.html  getting-started.html  glossary.html  greenkeeper.json  help.rs  index.html  intro-system.html  intro-testing.html  intro-x.html  intro.html  (+21 more)
build-tools/: Cargo.toml
build-tools/src/: cargo_watch.rs  main.rs
build-tools/src/cargo_watch/: mod.rs
build-tools/src/mdbook_bin/: mod.rs  preprocessors.rs  serve.rs  svgbob.rs  watch.rs
build-tools/tests/: integration.rs
build-tools/tests/common/: checkpoint.rs  debug.rs  debug_bindings.rs  mod.rs
commandspec/: .travis.yml  Cargo.toml  README.md  appveyor.yml  bors.toml
commandspec/src/: lib.rs  macros.rs  process.rs  signal.rs
commandspec/tests/: all.rs
edit-client/: Cargo.toml
edit-client/src/: actions.rs  client.rs  lib.rs  log.rs  monkey.rs  proxy.rs  random.rs  state.rs  walkers.rs  wasm.rs
edit-client/src/client/: actions.rs  clientdoc.rs  state.rs
edit-client/src/walkers/: caretstepper.rs
edit-common/: Cargo.toml
edit-common/log/: client
edit-common/src/: commands.rs  lib.rs  simple_ws.rs
edit-common/src/markdown/: de.rs  mod.rs  ser.rs
edit-common/test/: 16  203  232  237  277  283  286  289  294  295  301  323  357  362  363  371  372  374  378  383  387  39  392  405  417  428  429  439  452  468  472  495  499  50  502  504  508  510  525  528  (+44 more)
edit-common/tests/: transform.rs
edit-common/tests/transform/: 135  152  161  200  213  223  226  249  275  282  309  311  316  326  329  333  351  358  367  420  442  447  451  454  464  471  475  490  503  512  520  522  530  559  566  580  583  592  594  595  (+35 more)
edit-server/: .env  .gitignore  Cargo.toml
edit-server/migrations/2018-03-02-223250_create_posts/: up.sql
edit-server/migrations/2018-06-12-235631_logging/: down.sql  up.sql
edit-server/src/: carets.rs  db.rs  lib.rs  log.rs  state.rs  sync.rs
edit-server/src/db/: conn.rs  queries.rs  schema.rs  types.rs
edit-server/src/graphql/: client.rs  server.rs
mac-profiler/: Cargo.toml
mac-profiler/src/: dtrace.rs  main.rs
mercutio/: 173  Cargo.toml  failgen.rs  failrun.rs  m.wasm  m.wast  reinstall.sh  test.txt
mercutio-client/: Cargo.toml
mercutio-client/src/: actions.rs  client.rs  lib.rs  monkey.rs  proxy.rs  random.rs  state.rs  util.rs  walkers.rs  wasm.rs
mercutio-client/src/markdown/: de.rs
mercutio-common/: Cargo.toml
mercutio-common/log/: client  server
mercutio-common/src/: lib.rs  socket.rs
mercutio-common/src/markdown/: de.rs
mercutio-common/test/: 11  175  192  250  291  299  302  304  308  324  335  339  343  365  395  402  407  410  411  413  421  436  443  461  484  513  514  536  544  573  648  656  663  670  673  695  699  759  760  777  (+8 more)
mercutio-server/: Cargo.toml
mercutio-server/src/: db.rs  graphql.rs  lib.rs  main.rs  state.rs  sync.rs  sync_state.rs  util.rs
mercutio-server/src/db/: queries.rs  schema.rs
mercutio-server/src/graphql/: server.rs
mercutio-wasm/: Cargo.toml
mercutio-wasm/src/: lib.rs
mercutio/frontend/: app.ts  mote.scss  old.txt  package-lock.json  package.json  webpack.config.js
mercutio/frontend/src/: app.ts  commands.ts  editor.ts  interop.ts  mote.scss  multi.ts  parent.ts
mercutio/frontend/templates/: client.html  multi.html  presentation.html
mercutio/in/: 100  119  123  130  151  169  17  196  197  2  210  216  22  234  235  236  239  241  251  254  259  274  278  288  292  296  300  303  312  314  338  341  342  347  349  36  361  370  373  375  (+66 more)
mercutio/mercutio-wasm/: Cargo.toml
mercutio/mercutio-wasm/src/: lib.rs
mercutio/out2/: 1  102  106  119  128  14  140  144  146  147  158  160  168  169  175  176  189  206  207  210  214  219  22  230  233  235  244  25  254  255  257  27  272  273  278  29  31  42  43  45  (+12 more)
mercutio/out3/: 100  103  105  106  108  11  110  112  113  115  118  120  124  127  128  130  133  136  139  14  142  143  146  147  148  149  151  154  155  157  159  162  164  165  168  169  17  170  172  173  (+294 more)
mercutio/src/: lib.rs  main.rs  main.rs.bk  sync.rs  walkers.rs  wasm.rs
mercutio/src/markdown/: de.rs  mod.rs  ser.rs
mercutio/src/server/: mod.rs  sync.rs
mercutio/src/static/: index.html  mote.js
mercutio/test/: 103  180  184  334  350  356  380  390  397  399  416  457  478  493  496  501  511  531  535  546  547  549  556  611  649  660  677  714  719  738  749  784  785  792  811  844  853  891  904
mercutio/wasm/: Cargo.toml  mercutio.js  mercutio_web.wasm
mercutio/web/: Cargo.toml  mercutio.js  mercutio_web.wasm
mote/: Cargo.toml  package-lock.json  wow.txt
mote/etc/: main.rs
mote/frontend/: app.ts  mote.scss  package-lock.json  package.json  tsconfig.json  webpack.config.js
mote/src/: main.rs  main.txt
mote/web/: index.html
oatie/: Cargo.toml  const.txt  format-brackets.rs  tests.sh  transform-test.sh
oatie/etc/: delall.rs  failgen.rs  failrun.rs  fix.rs  help.txt  old.txt  why.rs
oatie/in/: 1  10  14  15  18  2  22  23  24  25  26  27  3  31  32  33  34  4  6  caret-1  caret-10  caret-11  caret-12  caret-13  caret-14  caret-16  caret-19  caret-20  caret-21  caret-22  caret-23  caret-24  caret-25  caret-26  caret-28  caret-29  caret-3  caret-30  caret-31  caret-36  (+20 more)
oatie/in/todo/: 35
oatie/in2/: 16  28
oatie/src/: apply.rs  compose.rs  core.rs  deserialize.rs  doc.rs  lib.rs  macros.rs  normalize.rs  ot.rs  parse.rs  place.rs  random.rs  rtf.rs  schema.rs  stepper.rs  string.rs  transform.rs  transform_test.rs  validate.rs  wasm.rs  writer.rs
oatie/tests/: apply.rs  compose.rs  doc.rs  docserialize.rs  etc.rs  monkey-todo  monkey.rs  transform.rs
tests/: Cargo.toml
tests/src/: lib.rs  main.rs
tests/tests/: integration.rs
(+1031 files in other folders)
