[package]
name = "build-tools"
version = "0.1.0"
authors = ["Tim Ryan <id@timryan.org>"]

[dependencies]
commandspec = "0.11"
failure = "0.1"
structopt = "0.2"
clap = "2.32"

# mdbook
mdbook = "=0.2.0"
notify = { version = "4.0" }
iron = { version = "0.6" }
staticfile = { version = "0.5" }
ws = { version = "0.7" }
log = "0.4"
env_logger = "0.5"
