[package]
name = "build-tools"
version = "0.1.0"
authors = ["Tim Ryan <id@timryan.org>"]
edition = "2018"

[dependencies]
commandspec = "<0.12.0"
failure = "0.1"
structopt = "0.2"
clap = "2.32"

# diesel-cli
diesel = "1.3"
migrations_internals = "~1.3.0"

# mdbook
mdbook = "=0.2.0"
notify = { version = "4.0" }
iron = { version = "0.6" }
staticfile = { version = "0.5" }
ws = { version = "0.7" }
log = "0.4"
env_logger = "0.5"

# wasm-bindgen-cli
wasm-bindgen-cli-support = { version = "0.2" }
wasm-bindgen-shared = { version = "0.2" }

# cargo-watch
watchexec = "1.9"
