[package]
name = "build-tools"
version = "0.1.0"
authors = ["Tim Ryan <id@timryan.org>"]
edition = "2018"

[dependencies]
commandspec = "0.12.2"
failure = "0.1"
structopt = "0.2"
clap = "2.32"
taken = "0.1.1"
rand = "0.4.2"
toml = "0.4"

# diesel-cli
diesel = { version = "1.3", features = ["sqlite"] }
libsqlite3-sys = { version = "*", features = ["bundled"] }
migrations_internals = "~1.3.0"

# mdbook
mdbook = { version = "=0.2.0", features = ["watch"] }
notify = { version = "4.0" }
iron = { version = "0.6" }
staticfile = { version = "0.5" }
ws = { version = "0.7" }
log = "0.4"
env_logger = "0.5"

# wasm-bindgen-cli
wasm-bindgen-cli-support = { version = "0.2" }
wasm-bindgen-shared = { version = "0.2" }

# cargo-watch
watchexec = "1.9"

[dev-dependencies]
# integration tests
tokio-timer = "0.2"
tokio = { version = "0.1.0", features = ["async-await-preview"] }
tokio-async-await = "0.1.4"
fantoccini = "0.11"
futures = "0.1.20"
serde_json = "*"
reqwest = "0.9"

[features]
integration = []
default = []
