[package]
authors = ["Tim Ryan <id@timryan.org>"]
name = "edit-client"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
colored = "1.6.0"
console_error_panic_hook = "0.1.5"
crossbeam-channel = "0.2"
env_logger = "0.4.3"
failure = "0.1.1"
lazy_static = "1.0.0"
maplit = "1.0.0"
matches = "0.1.6"
pulldown-cmark = "0.1.2"
pulldown-cmark-to-cmark = "1.1.0"
rand = "0.4"
ron = "0.2"
serde = "^1.0.27"
serde_derive = "^1.0.27"
serde_json = "^1.0.6"
take_mut = "0.2.0"
taken = "0.1.1"
wasm-bindgen = { version = "0.2", features = ["nightly", "serde-serialize"] }
wbg-rand = "0.4.1"
wee_alloc = "*"
wasm-typescript-definition = "0.1"

include-dir-macro = { git = "https://github.com/jcdyer/include-dir-macro" }
edit-common = { path = "../edit-common" }
oatie = { path = "../oatie" }

# [target."cfg(target_arch=\"wasm32\")".dependencies]
js-sys = "0.3"

# wasm target
[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "EventTarget",
    "HtmlElement",
    "Node",
    "Window",
    "CloseEvent",
    "Event",
    "MessageEvent",
    "WebSocket",
]


# non-wasm targets
[target."cfg(not(target_arch=\"wasm32\"))".dependencies]
bus = "1.3.2"
quicli = "0.3"
structopt = "0.2.3"
structopt-derive = "0.2.3"
tiny_http = "0.5.8"
url = "1.6.0"
ws = "0.7.3"
uuid = { features = ["v4"], version = "0.5" }

[features]
DEBUG_full_client_updates = []
default = ["DEBUG_full_client_updates"]