[package]
authors = ["Tim Ryan <id@timryan.org>"]
name = "edit-common"
version = "0.1.0"
edition = "2018"

[dependencies]
colored = "1.6.0"
# dotenv = "0.11.0"
env_logger = "0.4.3"
failure = "0.1.1"
htmlescape = "0.3.1"
lazy_static = "1.0.0"
maplit = "1.0.0"
pulldown-cmark = "0.1.2"
pulldown-cmark-to-cmark = "1.1.0"
rand = "0.4"
regex = "1"
ron = "0.2"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.6"
take_mut = "0.2.0"
taken = "0.1.1"
wasm-bindgen = { version = "0.2", features = ["nightly"] }
wasm-typescript-definition = "0.1"

[dependencies.include-dir-macro]
git = "https://github.com/jcdyer/include-dir-macro"

[dependencies.oatie]
path = "../oatie"

[target."cfg(not(target_arch=\"wasm32\"))".dependencies]
ws = "0.7.3"
