[package]
authors = ["Tim Ryan <id@timryan.org>"]
name = "edit-server"
version = "0.1.0"

[dependencies]
colored = "1.6.0"
crossbeam-channel = "0.2"
dotenv = "^0.13"
env_logger = "0.4.3"
failure = "0.1"
handlebars = "0.32.0"
juniper = "0.9.2"
lazy_static = "1.0.0"
maplit = "1.0.0"
md5 = "0.3.7"
mime_guess = "1.8.4"
pulldown-cmark = "0.1.2"
pulldown-cmark-to-cmark = "1.1.0"
quicli = "0.2.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
rand = "0.4"
reqwest = "0.8.5"
ron = "0.2"
libsqlite3-sys = { version = "*", features = ["bundled"] }
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.6"
structopt = "0.2.3"
structopt-derive = "0.2.3"
take_mut = "0.2.0"
taken = "0.1.1"
url = "1.6.0"
ws = "0.7.3"

[dependencies.diesel]
features = ["sqlite"]
version = "1.3"

[dependencies.include-dir-macro]
git = "https://github.com/jcdyer/include-dir-macro"

[dependencies.edit-common]
path = "../edit-common"

[dependencies.oatie]
path = "../oatie"

[dependencies.rouille]
default-features = false
features = []
version = "2.1.0"

[dependencies.uuid]
features = ["v4"]
version = "0.5"

[features]
standalone = []
