[package]
authors = ["Tim Ryan <id@timryan.org>"]
name = "mercutio-client"
version = "0.1.0"
[dependencies]
colored = "1.6.0"
env_logger = "0.4.3"
failure = "0.1.1"
lazy_static = "1.0.0"
maplit = "1.0.0"
matches = "0.1.6"
pulldown-cmark = "0.1.2"
pulldown-cmark-to-cmark = "1.1.0"
rand = "0.4"
ron = "0.2"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.6"
take_mut = "0.2.0"
taken = "0.1.1"

[dependencies.include-dir-macro]
git = "https://github.com/jcdyer/include-dir-macro"

[dependencies.mercutio-common]
path = "../mercutio-common"

[dependencies.oatie]
path = "../oatie"
[target."cfg(not(target_arch=\"wasm32\"))".dependencies]
bus = "1.3.2"
crossbeam-channel = "0.1.2"
quicli = "0.2.0"
structopt = "0.2.3"
structopt-derive = "0.2.3"
tiny_http = "0.5.8"
url = "1.6.0"
ws = "0.7.3"
#dotenv = "0.11.1"
simple-ws = { path = "../simple-ws" }

[target."cfg(not(target_arch=\"wasm32\"))".dependencies.uuid]
features = ["v4"]
version = "0.5"
