[package]
authors = ["Tim Ryan <id@timryan.org>"]
name = "mercutio-wasm"
version = "0.1.0"
[dependencies]
env_logger = "0.4.3"
failure = "0.1.1"
lazy_static = "1.0.0"
maplit = "1.0.0"
rand = "0.4"
serde = "1.0.21"
serde_derive = "1.0.21"
serde_json = "1.0.6"
take_mut = "0.2.0"
wasm-bindgen = "=0.2.4"

[dependencies.mercutio-client]
path = "../mercutio-client"

[dependencies.mercutio-common]
path = "../mercutio-common"

[dependencies.oatie]
path = "../oatie"

[lib]
crate-type = ["cdylib"]
name = "mercutio"
