[package]
authors = ["Tim Ryan <tim@3drobotics.com>"]
name = "mote"
version = "0.1.0"
[dependencies]
bodyparser = "0.7"
iron = "0.5"
mount = "0.3"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
rocket_contrib = "0.3.3"
router = "0.5"
serde = "1.0.21"
serde_derive = "1.0.21"
serde_json = "1.0.6"
staticfile = "0.4"

[dependencies.oatie]
path = "../oatie"
