[package]
authors = ["Tim Cameron Ryan <id@timryan.org>"]
name = "oatie"
version = "0.2.0"
[dependencies]
either = "1.4.0"
failure = "0.1.1"
log = "0.3.1"
maplit = "1.0.0"
rand = "*"
regex = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
term-painter = "0.2.2"
yansi = "0.3.4"

[dev-dependencies]
env_logger = "0.3"

[lib]
name = "oatie"
