[package]
authors = ["Tim Cameron Ryan <id@timryan.org>"]
description = "Operational transform library."
homepage = "https://github.com/tcr/edit-text"
license = "MIT OR Apache-2.0"
name = "oatie"
repository = "https://github.com/tcr/edit-text"
version = "0.3.0"

[dependencies]
either = "1.4.0"
failure = "0.1.1"
log = "0.3.1"
maplit = "1.0.0"
regex = "0.2.10"
ron = "0.2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
term-painter = "0.2.2"
yansi = "0.3.4"
rental = "*"
wasm-bindgen = "0.2"
smallvec = "*"

[dev-dependencies]
env_logger = "0.3"

[lib]
name = "oatie"
