[package]
authors = ["Tim Ryan <id@timryan.org>"]
name = "tests"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio-timer = "0.2"
tokio-async-await = "0.1.0"
commandspec = "0.7"
failure = "0.1.1"
fantoccini = "0.11"
futures = "0.1.20"
libc = "0.2.40"
rand = "0.4.2"
taken = "0.1.1"
rustc-serialize = "*"

[features]
integration = []
default = []
